# MoeTranslate

./: .gitignore  .gitmodules  404.html  CNAME  README.md  build.gradle  gradle.properties  index.html  notice.json  settings.gradle  version.json
.github/workflows/: deploy.yml
app/: build.gradle
app/libs/: Live2DCubismCore.aar
app/release/: output-metadata.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/Madoka_Magic/: Madoka_Magic.model3.json
app/src/main/assets/Madoka_Pajamas/: Madoka_Pajamas.model3.json
app/src/main/assets/Madoka_Swimsuit/: Madoka_Swimsuit.model3.json
app/src/main/assets/Madoka_Swimwear/: Madoka_Swimwear.model3.json
app/src/main/cpp/src/: CMakeLists.txt  (+4 more)
article/12evxwe3/: index.html
article/y3u9swl5/: index.html
assets/: 404.html-8MXjqTf2.js  404.html-BBkimjvd.js  404.html-BGso3mfc.js  404.html-BNSq9hNW.js  404.html-BUaeExe3.js  404.html-C0iml4XQ.js  404.html-CNaPJiJ3.js  404.html-CioStKcr.js  404.html-DEvk3Zqh.js  404.html-Dc2CZDE4.js  404.html-DlWNqcB0.js  404.html-Doq5jo80.js  404.html-DrL_sX2I.js  404.html-QnHVu4ic.js  404.html-Tk1fiZLE.js  404.html-_WzYT-qP.js  404.html-dnitt9-K.js  404.html-j3A8UFcC.js  SearchBox-B4V9KhT3.js  SearchBox-B9t8jzmb.js  SearchBox-BG9cjs_s.js  SearchBox-BRu2mf05.js  SearchBox-BomTdYPI.js  SearchBox-BuZOQHxH.js  SearchBox-BujSHKF2.js  SearchBox-C-8f_50J.js  SearchBox-CPZIvYtE.js  SearchBox-CRY_RM1R.js  SearchBox-CgqlOgYE.js  SearchBox-CjwstNms.js  SearchBox-D7-LMz34.js  SearchBox-DLQoy4Lg.js  SearchBox-DmxpExJK.js  SearchBox-IcvJALem.js  SearchBox-XGutf4oz.js  SearchBox-hbFf4drL.js  app-9O_k3J0H.js  app-B2Fqfs0B.js  app-BHRubMbR.js  app-BPQfwc2p.js  (+968 more)
blog/: index.html
blog/archives/: index.html
blog/categories/: index.html
blog/tags/: index.html
docs/: package-lock.json  package.json
docs/docs/: README.md  social.md  support.md
docs/docs/.vuepress/: client.ts  config.ts  navbar.ts  plume.config.ts
docs/docs/.vuepress/components/: DownloadButtons.vue  DownloadButtons2.vue  DownloadButtons3.vue
docs/docs/.vuepress/public/: notice.json  version.json
docs/docs/en/: README.md  social.md  support.md
docs/docs/en/preview/: custom-component.example.md  markdown.md
docs/docs/notes/docs/: Gemini使用.md  Live2D使用.md  翻译使用.md  项目介绍.md
docs/docs/notes/download/: 下载链接.md  其他下载.md  更新公告.md  注意事项.md
docs/docs/preview/: custom-component.example.md  markdown.md
docs/gemini/apiapplication/: index.html
docs/gemini/notice/: index.html
docs/intro/: index.html
docs/live2d/faq/: index.html
docs/live2d/fileconstruction/: index.html
docs/live2d/importmodel/: index.html
docs/notice/test/: index.html
docs/notice/test1/: index.html
docs/notice/test2/: index.html
docs/notice/ua/: index.html
docs/translation/apiconfig/: index.html
docs/translation/errorcode/: index.html
docs/translation/faq/: index.html
docs/translation/mode/: index.html
docs/translation/personalization/: index.html
docs/translationapi/azure/: index.html
docs/translationapi/baidu/: index.html
docs/translationapi/bing/: index.html
docs/translationapi/custompic/: index.html
docs/translationapi/customtext/: index.html
docs/translationapi/deepl/: index.html
docs/translationapi/llamacpp/: index.html
docs/translationapi/mlkit/: index.html
docs/translationapi/niutrans/: index.html
docs/translationapi/nllb/: index.html
docs/translationapi/tencent/: index.html
docs/translationapi/uniaitrans/: index.html
docs/translationapi/volc/: index.html
docs/usegemini/: index.html
docs/uselive2d/: index.html
docs/usetranslation/: index.html
download/announcement/: index.html
download/downloadlink/: index.html
download/notices/: index.html
download/others/: index.html
en/: index.html
en/article/2s9dockl/: index.html
en/article/dcxswh1e/: index.html
en/blog/: index.html
en/blog/archives/: index.html
en/blog/categories/: index.html
en/blog/tags/: index.html
en/demo/: index.html
en/demo/ihg142zk/: index.html
en/demo/kvbcxsxw/: index.html
en/socialmedia/: index.html
en/support/: index.html
framework/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
licenses/: NOTICE.txt
llama/: build.gradle
llama/src/main/cpp/: CMakeLists.txt  llama-bridge.cpp
socialmedia/: index.html
support/: index.html
(+661 files in other folders)
